--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,10 +1,28 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face {
+  font-family: BelledeMai-Heavy;
+  src: url("/public/fonts/BelledeMai-Heavy.otf") format("opentype");
+}
+
+@font-face {
+  font-family: PPFraktionSans-Light;
+  src: url("/public/fonts/pp-fraktionSans/PPFraktionSans-Light.eot"); /* IE9 Compat Modes */
+  src: url("/public/fonts/pp-fraktionSans/PPFraktionSans-Light.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+       url("/public/fonts/pp-fraktionSans/PPFraktionSans-Light.woff") format("woff"), /* Modern Browsers */
+       url("/public/fonts/pp-fraktionSans/PPFraktionSans-Light.ttf")  format("truetype"); /* Safari, Android, iOS */
+}
+
+@font-face {
+  font-family: PPFraktionSans-Bold;
+  src: url("/public/fonts/pp-fraktionSans/PPFraktionSans-Bold.eot"); /* IE9 Compat Modes */
+  src: url("/public/fonts/pp-fraktionSans/PPFraktionSans-Bold.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+       url("/public/fonts/pp-fraktionSans/PPFraktionSans-Bold.woff") format("woff"), /* Modern Browsers */
+       url("/public/fonts/pp-fraktionSans/PPFraktionSans-Bold.ttf")  format("truetype"); /* Safari, Android, iOS */
+}
+
+:root {
+  --fontFraktionBold: "PPFraktionSans-Bold", "Helvetica Neue", sans-serif;
+  --fontFraktionLight: "PPFraktionSans-Light", "Helvetica Neue", sans-serif;
+  --fontBelleHeavy: "BelledeMai-Heavy", "Helvetica Neue", serif;
 }
 
 html,
@@ -16,7 +34,9 @@ body,
   padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+body {
+  margin: 0;
+  font-family: var(--fontFraktionThin);
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
