--- a/frontend/src/components/Button/Button.css
+++ b/frontend/src/components/Button/Button.css
@@ -1,6 +1,6 @@
 .btn {
-  background-color: #303030;
-  color: #fff8f2;
+  background-color: var(--colorDark);
+  color: var(--colorPrimary);
   border: none;
   display: flex;
   justify-content: center;
@@ -11,7 +11,7 @@
 }
 
 .btn-light {
-  background-color: #fff8f2;
-  color: #303030;
+  background-color: var(--colorPrimary);
+  color: var(--colorDark);
   border: 1px solid #303030;
 }
