--- a/frontend/src/components/Button/Button.css
+++ b/frontend/src/components/Button/Button.css
@@ -8,10 +8,15 @@
   padding: 0.5rem;
   cursor: pointer;
   font-family: var(--fontFraktionBold);
+  transition: all ease 0.3s;
 }
 
 .btn-light {
   background-color: var(--colorPrimary);
   color: var(--colorDark);
   border: 1px solid #303030;
+}
+
+.btn:hover {
+  transform: scale(1.1);
 }
