--- a/frontend/src/components/NewEntry/NewEntry.css
+++ b/frontend/src/components/NewEntry/NewEntry.css
@@ -1,20 +1,105 @@
 .new-entry {
-    background-color: var(--colorDark);
-    color: var(--colorPrimary);
+  background-color: var(--colorDark);
+  color: var(--colorPrimary);
+  font-family: var(--fontFraktionLight);
 }
 
 .entry-date {
-    display: flex;
-    align-items: baseline;
-    margin-left: 8rem;
+  display: flex;
+  align-items: baseline;
+  margin-left: 8rem;
 }
 
-.icon-edit-icon {
-    border: none;
+.all-input {
+  display: flex;
+  justify-content: space-between;
+  text-align: left;
+}
+
+.entry-label {
+    margin-bottom: .5rem;
+}
+
+.entry-input {
+    padding: 3rem;
+}
+
+.morning {
+  width: 25%;
+  margin-left: 8rem;
+}
+
+.sun-svg {
+    padding-bottom: 1.5rem;
+}
+
+.focus,
+.affirmations {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 1.5rem;
+}
+
+.evening {
+  width: 25%;
+  margin-right: 8rem;
+}
+
+.moon-svg {
+    padding-bottom: 1.5rem;
+}
+
+.journal-input,
+.mood {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 1.5rem;
+}
+
+.mood-picker {
+  display: flex;
+}
+
+.add-img {
+    color: var(--colorPrimary);
+}
+
+.c-s-buttons {
+    display: flex;
+    justify-content: end;
+    padding: 5rem 0 2rem 0;
+}
+
+.cancel {
+    border: 1px solid var(--colorPrimary);
 }
 
 .icon-edit-icon:before {
-    content: "\e900";
-    color: var(--colorPrimary);
-    font-size: xx-large;
-  }
+  content: "\e900";
+  color: var(--colorPrimary);
+  font-size: xx-large;
+}
+
+.icon-happiest-emoji:before {
+  content: "\e901";
+  color: var(--colorPrimary);
+  font-size: xx-large;
+}
+
+.icon-happy-emoji:before {
+  content: "\e902";
+  color: var(--colorPrimary);
+  font-size: xx-large;
+}
+
+.icon-sad-emoji:before {
+  content: "\e906";
+  color: var(--colorPrimary);
+  font-size: xx-large;
+}
+
+.icon-saddest-emoji:before {
+  content: "\e907";
+  color: var(--colorPrimary);
+  font-size: xx-large;
+}
