--- a/frontend/src/components/NewEntry/NewEntry.css
+++ b/frontend/src/components/NewEntry/NewEntry.css
@@ -29,8 +29,10 @@
   margin-left: 8rem;
 }
 
-.sun-svg {
+.sun-svg,
+.moon-svg {
   padding-bottom: 1.5rem;
+  font-size: 4rem;
 }
 
 .focus,
@@ -43,10 +45,6 @@
 .evening {
   width: 25%;
   margin-right: 8rem;
-}
-
-.moon-svg {
-  padding-bottom: 1.5rem;
 }
 
 .journal-input,
