--- a/frontend/src/components/LogIn/LogIn.css
+++ b/frontend/src/components/LogIn/LogIn.css
@@ -1,48 +1,64 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 /*<form> hugging all content*/
 .login-form {
-    width: 75%;
-    margin: 0 auto;
-    color: var(--colorDark);
-    
+    max-width: 1100px;
+    padding: 50px;
+    color: var(--colorDark); 
 }
+
 
 /* Log In - Title */
 h2 {
     font-size: 3rem;
-    /*margin-right: 19rem;*/ 
+    margin-right: 17rem;
     margin-bottom: 4rem;
 }
 
-.login-title {
-    text-align: left;
-    margin-left: 17.5rem;
-    
-}
 
-
-/* Input form <div>, email and password */
-.input-form{
+/* Input Form, email and password */
+.input-form {
     display: flex;
     flex-direction: column;
     width: 40%;
     margin: 0 auto;
-    margin-bottom: 0.1rem;
+    margin-bottom: 0.2rem;
     padding: 0.5rem;
     text-align: left;
     font-family: var(--fontFraktionBold);
+    
 }
+
+.input {
+    width: 100%;
+    height: 30px;
+    border-radius: 4px;
+    margin: 0 auto;
+    border-style: none;
+    border: 1px solid #c4c4c4;
+}
+
+::placeholder {
+    padding-left: 0.5rem;
+    
+}
+
+
+
 
 /* Forgot password & No account, Sign up! */
 .info-links{
     display: flex;
     flex-direction: row;
     width: 100%;
-
     margin: 0 auto;
-    margin-bottom: 4rem;
+    padding-top: 1rem;
     font-family: var(--fontFraktionLight);
     justify-content: center;
-    
 }
 
 /* Forgot password - link */
@@ -64,7 +80,9 @@ h2 {
     display: flex;
     justify-content: end;
     margin-right: 20rem;
-    width: 73%;
+    width: 77%;
+    
+    padding: 5rem;
     cursor: pointer;
 } /*Láta takkann festast hægra megin í línu við input fields*/
 
