--- a/frontend/src/components/Button/Button.css
+++ b/frontend/src/components/Button/Button.css
@@ -3,9 +3,8 @@
   color: var(--colorPrimary);
   border: none;
   display: flex;
-  justify-content: center;
   align-items: center;
-  padding: 0.5rem;
+  padding: 0.5rem 1rem;
   cursor: pointer;
   font-family: var(--fontFraktionBold);
   transition: all ease 0.3s;
