--- a/frontend/src/components/EntryList/EntryList.css
+++ b/frontend/src/components/EntryList/EntryList.css
@@ -6,12 +6,17 @@
 }
 
 .header {
-    display: flex;
-    justify-content: space-between;
-    align-items:center;
+  width: 100%;
+  height: 6rem;
+  padding-top: 1rem;
+  position: fixed;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--colorPrimary);
 }
 
-.logo {
+.daily-h1 {
   font-size: 5rem;
   text-align: left;
   padding-left: 8rem;
@@ -21,7 +26,7 @@
 .btns {
   display: flex;
   justify-content: end;
-  margin-right: 2rem;
+  margin-right: 8rem;
   max-height: 46px;
 }
 
@@ -29,6 +34,3 @@
   margin-right: 2rem;
 }
 
-.icon-plus-icon:hover {
-    color: var(--colorDark);
-}
