--- a/frontend/src/components/LogIn/LogIn.css
+++ b/frontend/src/components/LogIn/LogIn.css
@@ -1,15 +1,42 @@
+.container {
+  display: flex;
+  width: 100%;
+  background-color: var(--colorWhite);
+}
 
-/*<form> hugging all content*/
-.login-form {
-  max-width: 1100px;
-  padding: 50px;
+/* Logo on the right side*/
+.right-side {
+  background-color: var(--colorPrimary);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+}
+
+.logo {
+  position: absolute;
+  z-index: 1;
+}
+
+.logo-bg {
+  position: relative;
+  height: 60rem;
+}
+
+/*<div> hugging all left side*/
+.left-side {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   color: var(--colorDark);
+  width: 50%;
+  padding: 0 0 0 8rem;
 }
 
 /* Log In - Title */
 .login-title {
   font-size: 3rem;
-  margin-right: 20rem;
+  text-align: left;
   margin-bottom: 4rem;
 }
 
@@ -17,21 +44,25 @@
 .input-form {
   display: flex;
   flex-direction: column;
-  width: 40%;
-  margin: 0 auto;
-  margin-bottom: 0.2rem;
-  padding: 0.5rem;
-  text-align: left;
+  width: 100%;
   font-family: var(--fontFraktionBold);
 }
 
+/* Email/Passw label on top of form input*/
+label {
+  text-align: left;
+}
+
 .input {
-  width: 100%;
-  height: 30px;
+  width: 60%;
+  height: 2rem;
   border-radius: 4px;
-  margin: 0 auto;
   border-style: none;
-  border: 1px solid #CED4DA;
+  border: 1px solid #ced4da;
+}
+
+#email.input {
+  margin-bottom: 1.5rem;
 }
 
 ::placeholder {
@@ -41,34 +72,22 @@
 /* Forgot password & No account, Sign up! */
 .info-link {
   display: flex;
-  flex-direction: row;
-  width: 100%;
-  margin: 0 auto;
-  padding-top: 1rem;
+  width: 60%;
+  justify-content: space-between;
+  padding-top: 0.5rem;
   font-family: var(--fontFraktionLight);
-  justify-content: center;
 }
 
-/* Forgot password - link */
-.forgot-pass {
-  width: 24%;
-  text-decoration: underline;
-  color: var(--colorDark);
-}
-
-/* No account? Sign up here - link */
+/* Forgot password/Sign Up - link */
+.forgot-pass,
 .sign-up {
-  width: 29%;
-  text-decoration: underline;
   color: var(--colorDark);
 }
 
 /*Log In button*/
 .login-btn {
   display: flex;
-  justify-content: end;
-  margin-right: 20rem;
-  width: 64%;
-  padding: 5rem;
+  justify-content: right;
+  width: 60%;
+  margin-top: 8rem;
 }
-
