--- a/frontend/src/components/SignUp/SignUp.css
+++ b/frontend/src/components/SignUp/SignUp.css
@@ -1,39 +1,33 @@
-
-/*<form> hugging all content*/
-.signup-form {
-    max-width: 1100px;
-    padding: 50px;
-    color: var(--colorDark); 
+.signup-title {
+  font-size: 3rem;
+  text-align: left;
+  margin-bottom: 4rem;
 }
 
-.signup-title{
-  font-size: 3rem;
-  margin-right: 17rem;
-  margin-bottom: 4rem;
+
+.links {
+  display: flex;
+  flex-direction: row;
+  width: 60%;
+  font-family: var(--fontFraktionLight);
+  justify-content: right;
+  align-items: baseline;
 }
 
 .log-in-link {
   color: var(--colorDark);
-  padding-left: .5rem;
-  margin-right: 0rem;
+  font-family: var(--fontFraktionLight);
+}
 
+#email.input,
+#name.input,
+#password.input {
+  margin-bottom: 1.5rem;
 }
 
 .signup-btn {
-    display: flex;
-    justify-content: end;
-    margin-right: 20rem;
-    width: 63%;
-    padding: 5rem;
-  }
-
-  .links {
-    display: flex;
-  flex-direction: row;
-  width: 100%;
-  margin: 0 auto;
-  margin-left: 6.8rem;
-  font-family: var(--fontFraktionLight);
-  justify-content: center;
-  align-items: baseline;
-  }
+  display: flex;
+  justify-content: right;
+  width: 60%;
+  margin-top: 8rem;
+}
