--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -29,11 +29,11 @@
 
 @font-face {
   font-family: "icomoon";
-  src: url("/public/icons/icomoon.eot?beaea5");
-  src: url("/public/icons/icomoon.eot?beaea5#iefix") format("embedded-opentype"),
-    url("/public/icons/icomoon.ttf?beaea5") format("truetype"),
-    url("/public/icons/icomoon.woff?beaea5") format("woff"),
-    url("/public/icons/icomoon.svg?beaea5#icomoon") format("svg");
+  src: url("/public/icons/icomoon.eot?9r17kv");
+  src: url("/public/icons/icomoon.eot?9r17kv#iefix") format("embedded-opentype"),
+    url("/public/icons/icomoon.ttf?9r17kv") format("truetype"),
+    url("/public/icons/icomoon.woff?9r17kv") format("woff"),
+    url("/public/icons/icomoon.svg?9r17kv#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -86,6 +86,11 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-logout-icon:before {
+  content: "\e90c";
+  margin-right: 0.5rem;
+  font-size: 1.2rem;
+}
 .icon-moon-icon:before {
   content: "\e904";
   color: #fff8f2;
@@ -106,12 +111,12 @@ body {
 }
 .icon-login-icon:before {
   content: "\e903";
-  margin-right: .5rem;
+  margin-right: 0.5rem;
   font-size: 1.2rem;
 }
 .icon-plus-icon:before {
   content: "\e905";
-  margin-right: .5rem;
+  margin-right: 0.5rem;
   font-size: 1rem;
 }
 .icon-sad-emoji:before {
@@ -126,7 +131,7 @@ body {
 }
 .icon-save-icon:before {
   content: "\e908";
-  margin-right: .5rem;
+  margin-right: 0.5rem;
   font-size: 1rem;
 }
 .icon-sun-icon:before {
@@ -135,11 +140,11 @@ body {
 }
 .icon-user-icon:before {
   content: "\e90a";
-  margin-right: .5rem;
+  margin-right: 0.5rem;
   font-size: 1rem;
 }
 .icon-x-icon:before {
   content: "\e90b";
-  margin-right: .5rem;
+  margin-right: 0.5rem;
   font-size: 1rem;
 }
