--- a/frontend/src/components/EntryList/EntryList.css
+++ b/frontend/src/components/EntryList/EntryList.css
@@ -26,7 +26,7 @@
 
 .btns {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   margin-right: 8rem;
   max-height: 46px;
 }
@@ -34,4 +34,3 @@
 .btn-entry {
   margin-right: 2rem;
 }
-
