--- a/frontend/src/components/Entry/Entry.css
+++ b/frontend/src/components/Entry/Entry.css
@@ -21,7 +21,7 @@
 }
 
 .entry__title {
-  font-size: larger;
+  font-size: 1.2rem;
   font-family: var(--fontFraktionBold);
   margin-bottom: .5rem;
 }
