--- a/frontend/src/components/NewEntry/NewEntry.css
+++ b/frontend/src/components/NewEntry/NewEntry.css
@@ -2,21 +2,23 @@
   background-color: var(--colorDark);
   color: var(--colorPrimary);
   font-family: var(--fontFraktionLight);
+  width: 90%;
+  max-width: 70rem;
+  margin: 0 auto;
 }
 
-.date-container {
+.headline-container {
   display: flex;
-  align-items: baseline;
 }
 
 .entry-headline {
   font-size: 3rem;
-  margin-left: 8rem;
+  margin-left: 9rem;
 }
 
 .all-input {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   text-align: left;
 }
 
@@ -26,11 +28,6 @@
 
 .entry-input {
   padding: 3rem;
-}
-
-.morning {
-  width: 25%;
-  margin-left: 8rem;
 }
 
 .sun-svg,
@@ -46,9 +43,9 @@
   padding-bottom: 1.5rem;
 }
 
+.morning,
 .evening {
-  width: 25%;
-  margin-right: 8rem;
+  margin: 0 1rem;
 }
 
 .journal-input,
@@ -72,6 +69,7 @@
 
 .add-img {
   color: var(--colorPrimary);
+  border: 1px solid var(--colorPrimary);
 }
 
 .c-s-buttons {
