--- a/frontend/src/components/EmptyState/EmptyState.css
+++ b/frontend/src/components/EmptyState/EmptyState.css
@@ -27,9 +27,18 @@
 }
 
 .btn-large {
-    padding: 1rem 2rem;
     font-size: 1.5rem;
     margin: 5rem;
+}
+
+.btn-large[class^="icon-"],
+.btn-large[class*=" icon-"] {
+    padding: 1rem 2rem 1rem 5rem; 
+}
+
+.btn-large.icon-plus-icon:before {
+    font-size: 1.5rem;
+    left: 2rem;
 }
 
 .empty-svg {
