--- a/frontend/src/components/NewEntry/NewEntry.css
+++ b/frontend/src/components/NewEntry/NewEntry.css
@@ -26,14 +26,11 @@
   margin-bottom: 0.7rem;
 }
 
-.entry-input {
-  padding: 3rem;
-}
-
 .sun-svg,
 .moon-svg {
   padding-bottom: 1.5rem;
   font-size: 4rem;
+  height: 4rem;
 }
 
 .focus {
@@ -50,16 +47,31 @@
 .tasks-section{
   display: flex;
   align-items: flex-end;
+  justify-content: space-between;
+  width: 100%;
 }
 
 .input-small {
-  padding: .5rem 1.5rem;
+  padding: 0 1rem;
+  height: 2rem;
+  width: 100%;
 }
 
 .add-task-btn {
   border: 1px solid var(--colorPrimary);
-  padding: .5rem 0 .5rem .5rem;
   margin-left: 1rem;
+  margin-bottom: 2px;
+  height: 2rem;
+  width: 2rem;
+}
+
+.add-task-btn[class^="icon-"],
+.add-task-btn[class*=" icon-"] {
+  padding: .5rem 0 .5rem .5rem;
+}
+
+.add-task-btn:before {
+  left: 0.4rem;
 }
 
 .morning,
@@ -76,6 +88,7 @@
 
 .mood-picker {
   display: flex;
+  height: 2.5rem;
 }
 
 .btn-icon:hover {
@@ -85,6 +98,7 @@
 .add-img {
   color: var(--colorPrimary);
   border: 1px solid var(--colorPrimary);
+  margin: 1rem 0;
 }
 
 .c-s-buttons {
@@ -96,4 +110,8 @@
 .cancel {
   border: 1px solid var(--colorPrimary);
   margin-right: 2rem;
+}
+
+.save {
+  border: 1px solid var(--colorPrimary); 
 }
