--- a/frontend/src/components/Authbox/Authbox.css
+++ b/frontend/src/components/Authbox/Authbox.css
@@ -1,16 +1,20 @@
-.container {
+.auth {
   display: flex;
   width: 100%;
   background-color: var(--colorWhite);
 }
 
-/* Logo on the right side*/
-.right-side {
-  background-color: var(--colorPrimary);
+.auth__box {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 50%;
+  padding: 0 5%;
+}
+
+/* Logo on the right side*/
+.auth__box--right {
+  background-color: var(--colorPrimary);
 }
 
 .logo {
@@ -19,19 +23,24 @@
 }
 
 .logo-bg {
-  position: relative;
-  height: 60rem;
+  position: absolute;
+  height: 100%;
   z-index: 1;
 }
 
 /*<div> hugging all left side*/
-.left-side {
+.auth__box--left {
+  flex-direction: column;
+  color: var(--colorDark);
+}
+
+.auth__header {
+  width: 100%;
+}
+
+.auth__footer {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  color: var(--colorDark);
-  width: 50%;
-  padding: 0 0 0 8rem;
 }
 
 /* Log In - Title */
@@ -41,33 +50,31 @@
   margin-bottom: 4rem;
 }
 
+.auth__form {
+  width: 100%;
+}
+
 /* Input Form, email and password */
-.input-form {
+.auth__field {
   display: flex;
   flex-direction: column;
   width: 100%;
+  margin-bottom: 1.5rem;
   font-family: var(--fontFraktionBold);
 }
 
 /* Email/Passw label on top of form input*/
-label {
+.auth__field label {
   text-align: left;
 }
 
-.input {
-  width: 60%;
+.auth__field input {
+  width: 100%;
   height: 2rem;
+  padding: 0 0.8rem;
   border-radius: 4px;
   border-style: none;
   border: 1px solid #ced4da;
-}
-
-#email.input {
-  margin-bottom: 1.5rem;
-}
-
-::placeholder {
-  padding-left: 0.5rem;
 }
 
 /* Forgot password & No account, Sign up! */
@@ -80,9 +87,20 @@ label {
 }
 
 /* Forgot password/Sign Up - link */
-.forgot-pass,
-.sign-up {
+.auth__register {
+  margin-top: 1rem;
   color: var(--colorDark);
+  text-align: center;
+}
+.auth__register a {
+  color: var(--colorDark);
+  font-weight: 900;
+  text-decoration: none;
+  transition: all 0.3s ease;
+}
+
+.auth__register a:hover {
+  opacity: 0.6;
 }
 
 /*Log In button*/
@@ -91,4 +109,15 @@ label {
   justify-content: right;
   width: 60%;
   margin-top: 8rem;
+}
+.auth__error {
+  font-size: 1rem;
+  margin-top: 0.6rem;
+  color: rgb(214, 49, 49);
+}
+
+.footer .auth__error {
+  margin-bottom: 1rem;
+  text-align: center;
+  font-size: 1.25rem;
 }
