--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -2,4 +2,15 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  height: 5rem;
+  padding: 0 2rem;
+}
+
+header a {
+  color: var(--colorDark);
+  text-decoration: none;
+}
+
+header h1 {
+  font-size: 3rem;
 }
