--- a/frontend/src/components/Dashboard/Dashboard.css
+++ b/frontend/src/components/Dashboard/Dashboard.css
@@ -8,6 +8,14 @@
   align-items: flex-start;
 }
 
+.entry-list {
+  display: flex;
+  flex-direction: column;
+  width: 60%;
+  margin: 0 auto;
+}
+
+
 .todos {
   display: flex;
   flex-direction: column;
