--- a/frontend/src/components/EmptyState/EmptyState.css
+++ b/frontend/src/components/EmptyState/EmptyState.css
@@ -27,18 +27,18 @@
 }
 
 .btn-large {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     
 }
 
 .btn-large[class^="icon-"],
 .btn-large[class*=" icon-"] {
-    padding: 1rem 2rem 1rem 5rem; 
+    padding: .5rem 1rem .5rem 3rem; 
 }
 
 .btn-large.icon-plus-icon:before {
-    font-size: 1.5rem;
-    left: 2rem;
+    font-size: 1.2rem;
+    left: 1rem;
 }
 
 .empty-svg {
