--- a/frontend/src/components/NewEntry/NewEntry.css
+++ b/frontend/src/components/NewEntry/NewEntry.css
@@ -1,117 +1,37 @@
+.entry-title{
+  font-family: var(--fontFraktionBold);
+  color: var(--colorWhite);
+}
+
 .new-entry {
   background-color: var(--colorDark);
-  color: var(--colorPrimary);
-  font-family: var(--fontFraktionLight);
-  width: 90%;
-  max-width: 70rem;
-  margin: 0 auto;
-}
-
-.headline-container {
   display: flex;
+  align-items: center;
+  margin-bottom: 2rem;
+  margin: auto 0;
+  margin-top: 2rem;
+  padding-left: 0rem;
+  justify-content: center;
+  padding: 1rem 0rem;
 }
-
-.entry-headline {
-  font-size: 3rem;
-  margin-left: 9rem;
-}
-
-.all-input {
-  display: flex;
-  justify-content: space-around;
-  text-align: left;
-}
-
-.entry-label {
-  margin-bottom: 0.7rem;
-}
-
-.sun-svg,
-.moon-svg {
-  padding-bottom: 1.5rem;
-  font-size: 4rem;
-  height: 4rem;
-}
-
-.focus {
-  display: flex;
-  flex-direction: column;
-  padding-bottom: 1.5rem;
-}
-
-.tasks {
-  display: flex;
-  flex-direction: column;
-}
-
-.tasks-section{
-  display: flex;
-  align-items: flex-end;
-  justify-content: space-between;
+/*Textinn í input notar ekki allan input-field, staðsetur sig í miðju*/
+.new-entry__input {
   width: 100%;
+  margin-right: 0.2rem;
+  font-family: var(--fontFraktionBold);
+  font-size: 1rem;
+  padding: 0.8rem 15rem;
+  background-color: var(--colorPrimary);
+  border: 0.2rem solid var(--colorDark);
 }
 
-.input-small {
-  padding: 0 1rem;
-  height: 2rem;
-  width: 100%;
-}
 
-.add-task-btn {
-  border: 1px solid var(--colorPrimary);
-  margin-left: 1rem;
-  margin-bottom: 2px;
-  height: 2rem;
-  width: 2rem;
+/*
+textarea{
+  resize: none;
 }
+*/
 
-.add-task-btn[class^="icon-"],
-.add-task-btn[class*=" icon-"] {
-  padding: .5rem 0 .5rem .5rem;
-}
-
-.add-task-btn:before {
-  left: 0.4rem;
-}
-
-.morning,
-.evening {
-  margin: 0 1rem;
-}
-
-.journal-input,
-.mood {
-  display: flex;
-  flex-direction: column;
-  padding-bottom: 1.5rem;
-}
-
-.mood-picker {
-  display: flex;
-  height: 2.5rem;
-}
-
-.btn-icon:hover {
-  transform: scale(1.1);
-}
-
-.add-img {
-  color: var(--colorPrimary);
-  border: 1px solid var(--colorPrimary);
-  margin: 1rem 0;
-}
-
-.c-s-buttons {
-  display: flex;
-  justify-content: flex-end;
-  padding: 5rem 0 2rem 0;
-}
-
-.cancel {
-  border: 1px solid var(--colorPrimary);
-  margin-right: 2rem;
-}
-
-.save {
-  border: 1px solid var(--colorPrimary); 
+.add-btn {
+  float: right;
 }
