--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -8,8 +8,8 @@ header {
   padding: 0 2rem;
 }
 
-header a {
-  color: var(--colorDark);
+.header__logo {
+  color: var(--colorWhite);
   text-decoration: none;
 }
 
