--- a/frontend/src/components/NewEntry/NewEntry.css
+++ b/frontend/src/components/NewEntry/NewEntry.css
@@ -1,6 +1,14 @@
-.entry-title{
+.new-entry__wrap {
+  width: 85%;
+  max-width: 900px;
+}
+
+.new-entry__title{
   font-family: var(--fontFraktionBold);
-  color: var(--colorWhite);
+  font-size: 20px;
+  color: var(--colorPrimary);
+  margin-bottom: 1rem;
+  position: relative;
 }
 
 .new-entry {
@@ -9,29 +17,27 @@
   align-items: center;
   margin-bottom: 2rem;
   margin: auto 0;
-  margin-top: 2rem;
-  padding-left: 0rem;
   justify-content: center;
-  padding: 1rem 0rem;
+  padding: 6rem 0rem 2rem 0rem;
 }
 /*Textinn í input notar ekki allan input-field, staðsetur sig í miðju*/
 .new-entry__input {
   width: 100%;
-  margin-right: 0.2rem;
+  position: relative;
+  padding: .5rem;
   font-family: var(--fontFraktionBold);
   font-size: 1rem;
-  padding: 0.8rem 15rem;
+  /*padding: 0.8rem 15rem;*/
+  height: 5rem;
   background-color: var(--colorPrimary);
-  border: 0.2rem solid var(--colorDark);
+  margin: 1rem 0;
 }
-
-
-/*
-textarea{
-  resize: none;
-}
-*/
 
 .add-btn {
   float: right;
+  border: 1px solid var(--colorDark);
+}
+
+.add-btn:hover {
+  border: 1px solid var(--colorPrimary);
 }
