--- a/frontend/src/components/Button/Button.css
+++ b/frontend/src/components/Button/Button.css
@@ -28,4 +28,5 @@
 .btn-light:hover {
   background-color: var(--colorDark);
   color: var(--colorPrimary);
+  border: 1px solid var(--colorPrimary);
 }
