--- a/frontend/src/components/EntryCard/EntryCard.css
+++ b/frontend/src/components/EntryCard/EntryCard.css
@@ -27,14 +27,16 @@
   background-color: var(--colorPrimary);
   line-height: 1.3rem;
   height: 9rem;
-  padding: 1.2rem;
+  padding: 1rem 1.2rem;
 }
 
 textarea {
   resize: none;
-  
 }
 
+textarea:focus { 
+  outline: none !important;
+}
 
 .entry__date {
   font-size: 3rem;
