--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -9,11 +9,11 @@ header {
 }
 
 .header__logo {
-  color: var(--colorWhite);
+  color: var(--colorPrimary);
   text-decoration: none;
 }
 
 header h1 {
-  font-size: 3rem;
+  font-size: 4rem;
   letter-spacing: .2rem;
 }
